update price @1997 now

--- a/checkout.html
+++ b/checkout.html
@@ -176,7 +176,7 @@
                                 <li><b>End Date:</b> April 14, 2020, 8 p.m.</li>
                                 <li><b>Lecture timings:</b> 6 p.m. - 8 p.m.</li>
                                 <li><b>Venue:</b> Online Event</li>
-                                <p style="font-size:25px;padding-top:5px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;997</span></p>
+                                <p style="font-size:25px;padding-top:5px;"><b>&#8377;1,997</b></p>
                             </ul>
                             <div style="padding:0px 10px;">
                                 <a data-toggle="modal" data-target="#razorpay" class="btn-green btn-block caps cursor-pointer" style="padding:10px;background-color:#2fbe6d;border-radius:10px;color:#fff;font-size:20px;text-align:center;">Buy Tickets</a>
@@ -316,7 +316,7 @@
                             <li style="padding-bottom:5px;"><b>End Date:</b> April 14, 2020, 8 p.m.</li>
                             <li style="padding-bottom:5px;"><b>Lecture timings:</b> 6 p.m. - 8 p.m.</li>
                             <li style="padding-bottom: 5px;"><b>Venue:</b> Online Event</li>                       
-                            <p style="font-size: 25px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;997</span></p>
+                            <p style="font-size: 25px;"><b>&#8377;1,997</b></p>
                         </ul>
                         <div style="padding: 0px 10px;">
                             <a data-toggle="modal" data-target="#razorpay" class="btn-green btn-block caps" style="padding: 5px;background-color:#2fbe6d;border-radius: 10px;color:#fff;font-size: 23px;text-align:center;">Buy Tickets</a>
@@ -481,16 +481,16 @@
                                         </td>
                                     </tr>
                                     <tr class="cart-subtotal">
-                                        <th>Discount(%)</th>
+                                        <th>Discount</th>
                                         <td><strong>
-                                            <span>-<span class="discount">50%</span></span>
+                                            <span>&#8377;<span class="discount">0</span></span>
                                             </strong> 
                                         </td>
                                     </tr>  
                                     <tr class="order-total">
                                         <th>Total</th>
                                         <td><strong>
-                                                <span>&#8377;<span name="amount" class="modaltotal">997</span></span>
+                                                <span>&#8377;<span name="amount" class="modaltotal">1997</span></span>
                                             </strong> 
                                         </td>
                                     </tr>    
