--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </div>
                     <div class="de elBTN elAlign_center elMargin0 ui-droppable de-editable font-Oswald-m" id="tmp_button-86350" data-de-type="button" data-de-editing="false" data-title="button" data-ce="false" data-trigger="none" data-animate="fade" data-delay="500" style="margin-top:20px;outline:none;background-color:#e43b2c;border-radius:3px;padding:10px;" aria-disabled="false" data-google-font="Oswald">
                         <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 mfs_20" style="color:rgb(255, 255, 255);font-weight:600;font-size:26px;" rel="noopener noreferrer">
-                            <span class="elButtonMain font-Oswald-l">GET THE "DISCOUNTED PRICE" @50% OFF</span>
+                            <span class="elButtonMain font-Oswald-l">GET THE COURSE @1,997 NOW</span>
                             <span class="elButtonSub"></span>
                         </a>
                     </div>
@@ -808,7 +808,7 @@
                     </div>
                     <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
                         <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
-                            <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
+                            <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW<i class="fa_appended fa fa-angle-right"></i>
                             </span>
                             <span class="elButtonSub"></span>
                         </a>
@@ -953,9 +953,9 @@
                     <div>
                         <iframe width="790" height="400" src="https://www.youtube.com/embed/4qMQDZvxHHU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="height:500px;width:800px;"></iframe>
                     </div>
-                    <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
+                    <div class="col-md-12 font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
                         <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color:rgb(255, 255, 255);font-weight:600; background-color:rgb(228, 59, 44);text-align:center;font-size:30px;padding:15px;border-radius:3px;display:flex;justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
-                            <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
+                            <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW<i class="fa_appended fa fa-angle-right"></i>
                             </span>
                             <span class="elButtonSub"></span>
                         </a>
@@ -1058,7 +1058,7 @@
                 </div>
                 <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
                     <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
-                        <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
+                        <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW<i class="fa_appended fa fa-angle-right"></i>
                         </span>
                         <span class="elButtonSub"></span>
                     </a>
@@ -1227,7 +1227,7 @@
                     </div>
                     <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
                         <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size: 32px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
-                            <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
+                            <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW<i class="fa_appended fa fa-angle-right"></i>
                             </span>
                             <span class="elButtonSub"></span>
                         </a>
@@ -1272,7 +1272,7 @@
                                 </div>
                             </div>
                             <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-72748" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px; outline: none; cursor: pointer; font-family:oswald-b;" aria-disabled="false">
-                                <div class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:26px; color: rgb(228, 59, 44);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>(The DISCOUNTED PRICE 50% OFF Discount Ends Soon)</b></div>
+                                <div class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center; font-size:26px; color: rgb(228, 59, 44);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>(GET THE COURSE @RS.1,997 NOW)</b></div>
                             </div>
                             <div data-de-type="list" data-de-editing="false" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px;outline: none;cursor: pointer;font-family: roboto-l;" aria-disabled="false">
                                 <ul style="list-style:none;text-align:initial;font-size: 15px;padding-left: 10px;">
@@ -1301,8 +1301,7 @@
                             </div>
                             <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
                                 <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:20px;padding:15px;border-radius:3px;display:flex;    justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
-                                    <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES >
-                                    </span>
+                                    <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW</span>
                                     <span class="elButtonSub"></span>
                                 </a>
                             </div>
@@ -1344,7 +1343,7 @@
 
         <!--  -->
         <div class="position-fixed p-5 d-flex justify-content-center align-items-center " style="bottom: 0px; width: 100%; background-color: black; z-index: 100;">
-            <h2 class="text-white pr-2" style="font-size: 2.5rem;">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES</h2>
+            <h2 class="text-white pr-2" style="font-size: 2.5rem;">GET THE COURSE @RS.1,997</h2>
             <button class="btn btn-primary px-4" onclick="window.location = 'checkout'" style="font-size: 2rem;">BUY NOW</button>
         </div>
         <!-- Navigation -->
@@ -1431,7 +1430,7 @@
                         <a href="checkout"
                             class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1 mfs_20"
                             style="color:rgb(255, 255, 255);font-weight:600;font-size:50px;" rel="noopener noreferrer">
-                            <span class="elButtonMain font-Oswald-l">GET THE "DISCOUNTED PRICE" @RS.997 NOW</span>
+                            <span class="elButtonMain font-Oswald-l">GET THE COURSE @RS.1,997 NOW</span>
                             <span class="elButtonSub"></span>
                         </a>
                     </div>
@@ -2061,7 +2060,7 @@
                 </div>
                 <div class="font-Oswald-b" style="outline:none;display:flex;justify-content:center;">
                     <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
-                        <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
+                        <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW<i class="fa_appended fa fa-angle-right"></i>
                         </span>
                         <span class="elButtonSub"></span>
                     </a>
@@ -2177,7 +2176,7 @@
                 </div>
                 <div class="font-Oswald-b" style="outline:none;display:flex;justify-content:center;">
                     <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
-                        <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
+                        <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW<i class="fa_appended fa fa-angle-right"></i>
                         </span>
                         <span class="elButtonSub"></span>
                     </a>
@@ -2267,7 +2266,7 @@
                 </div>
                 <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
                     <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
-                        <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
+                        <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW<i class="fa_appended fa fa-angle-right"></i>
                         </span>
                         <span class="elButtonSub"></span>
                     </a>
@@ -2435,7 +2434,7 @@
                 </div>
                 <div class="font-Oswald-b" style="outline:none;display:flex;justify-content:center;">
                     <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
-                        <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES <i class="fa_appended fa fa-angle-right"></i>
+                        <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW<i class="fa_appended fa fa-angle-right"></i>
                         </span>
                         <span class="elButtonSub"></span>
                     </a>
@@ -2479,7 +2478,7 @@
                                 </div>
                             </div>
                             <div class="de elHeadlineWrapper ui-droppable de-editable" id="tmp_subheadline-72748" data-de-type="headline" data-de-editing="false" data-title="sub-headline" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px; outline: none; cursor: pointer; font-family:oswald-b;" aria-disabled="false">
-                                <div class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center;font-size: 32px;color: rgb(228, 59, 44);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>(The DISCOUNTED PRICE 50% OFF Discount Ends Soon)</b></div>
+                                <div class="ne elHeadline hsSize2 lh3 elMargin0 elBGStyle0 hsTextShadow0" style="text-align: center;font-size: 32px;color: rgb(228, 59, 44);" data-bold="inherit" data-gramm="false" contenteditable="false"><b>(GET THE COURSE @RS.1,997 NOW)</b></div>
                             </div>
                             <div data-de-type="list" data-de-editing="false" data-ce="true" data-trigger="none" data-animate="fade" data-delay="500" data-gramm="false" style="margin-top: 15px;outline: none;cursor: pointer;font-family: roboto-r;" aria-disabled="false">
                                 <ul style="list-style:none;text-align:initial;font-size: 32px;padding-left: 10px;">
@@ -2508,8 +2507,7 @@
                             </div>
                             <div class="font-Oswald-b" style="margin-top:30px;outline:none;display:flex;    justify-content:center;">
                                 <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255);font-weight: 600;background-color: rgb(228, 59, 44);font-size: 40px;padding:15px;border-radius:3px;display:flex;justify-content:center;" rel="noopener noreferrer" id="undefined-141-1053">
-                                    <span class="elButtonMain">GET THE "DISCOUNTED PRICE" @RS.997 NOW BEFORE IT EXPIRES &gt;
-                                    </span>
+                                    <span class="elButtonMain">GET THE COURSE @RS.1,997 NOW</span>
                                     <span class="elButtonSub"></span>
                                 </a>
                             </div>
