--- a/cryptonite.html
+++ b/cryptonite.html
@@ -271,8 +271,8 @@
         </div>
         <!-- main content -->
         <div class="container-fluid" style="margin-top:116px;background-color:black">
-            <div class="container">
-                <iframe width="300" height="200" src="https://www.youtube.com/embed/4qMQDZvxHHU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+            <div class="container" style="padding:20px;">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/4qMQDZvxHHU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
             </div>
         </div>
         <!-- main content 1 -->
