--- a/checkout.html
+++ b/checkout.html
@@ -632,14 +632,14 @@
                 </div>
                 <div style="border-radius:10px;top:5px;display:none;" class="order-success bg-white shadow-buy-now-button-1 position-relative">
                     <h2 class="font-roboto-b m-0 mb-2 text-capitalize text-center"
-                        style="font-size: 40px;padding-top:30px;">THANK YOU</h2>
+                        style="font-size: 40px;padding-top:30px;">User Already Exist</h2>
                     <h2 class="font-poppins-regular m-0 mb-2 text-center" style="font-size:20px;padding:10px;">Your Already paid for this Course</h2>
                     <div class="px-5">
                         <hr>
                         <div class="d-flex justify-content-center align-items-center">
                             <p class="para font-poppins-regular"
                                 style="text-align:center;padding-top:10px;padding-bottom:20px;margin:1px auto !important;">
-                                Please used user credentials for login, Click on given login button
+                                Please used your credentials for login, Click on given login button
                             </p>
                         </div>
                         <div class="d-flex justify-content-center align-items-center" style="padding-bottom: 60px;">
