changes made live

--- a/checkout.html
+++ b/checkout.html
@@ -1029,7 +1029,7 @@
                                 // alert("checked out");
                                 var order_id = data.id;
                                 var options = {
-                                    "key": "rzp_test_BAnreND3t2AMOK", // rzp_live_LSedTe83FzVuTe, rzp_test_BAnreND3t2AMOK test key // Enter the Key ID generated from the Dashboard rzp_test_Deii5btTqdfYUu rzp_live_LSedTe83FzVuTe
+                                    "key": "rzp_live_LSedTe83FzVuTe", // rzp_live_LSedTe83FzVuTe, rzp_test_BAnreND3t2AMOK test key // Enter the Key ID generated from the Dashboard rzp_test_Deii5btTqdfYUu rzp_live_LSedTe83FzVuTe
                                     "amount": parseInt(dataResult.value * 100), // Amount is in currency subunits. Default currency is INR. Hence, 29935 refers to 29935 paise or INR 299.35.    
                                     "currency": "INR",
                                     "name": "Finstreet",
@@ -1367,7 +1367,7 @@
                                 // alert("checked out");
                                 var order_id = data.id;
                                 var options = {
-                                    "key": "rzp_test_BAnreND3t2AMOK", // rzp_live_LSedTe83FzVuTe, rzp_test_BAnreND3t2AMOK test key // Enter the Key ID generated from the Dashboard rzp_test_Deii5btTqdfYUu rzp_live_LSedTe83FzVuTe
+                                    "key": "rzp_live_LSedTe83FzVuTe", // rzp_live_LSedTe83FzVuTe, rzp_test_BAnreND3t2AMOK test key // Enter the Key ID generated from the Dashboard rzp_test_Deii5btTqdfYUu rzp_live_LSedTe83FzVuTe
                                     "amount": parseInt(dataResult.value * 100), // Amount is in currency subunits. Default currency is INR. Hence, 29935 refers to 29935 paise or INR 299.35.    
                                     "currency": "INR",
                                     "name": "Finstreet",
