update index page mobile view

--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@
             </div>
             <div>
                 <div class="youtube2" data-embed="4qMQDZvxHHU" style="display:flex;justify-content:center;">
-                    <div class="play-button"></div>
+                    <div class="play-button" style="top:2%;"></div>
                 </div>
                 <div style="padding:30px 0px;">
                     <b class="font-Oswald-b" style="display:block;text-align:center;font-size:108px;color:#fff;line-height:125px;">India's Biggest Cryptocurrency Event is HERE..!</b>
@@ -2172,7 +2172,7 @@
                     </div>
                 </div>
                 <div class="youtube2" data-embed="4qMQDZvxHHU" style="display:flex;justify-content:center;padding:30px 0px;">
-                    <div class="play-button"></div>
+                    <div class="play-button" style="top:74.8%"></div>
                 </div>
                 <div class="font-Oswald-b" style="outline:none;display:flex;justify-content:center;">
                     <a href="checkout" class="elButton elButtonSize1 elButtonColor1 elButtonRounded elButtonPadding2 elBtnVP_10 elButtonCorner3 elButtonFluid elBtnHP_25 elBTN_b_1 elButtonShadowN1 elButtonTxtColor1" style="color: rgb(255, 255, 255); font-weight: 600; background-color: rgb(228, 59, 44); font-size:53px;padding:20px;border-radius:10px;display:flex;text-align:center;" rel="noopener noreferrer">
