update index page

--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
             </nav>
         </div>
         <!-- Page Content -->
-        <div class="container-fluid" style="margin-top:106px;background-image:url(images/background-pic.jpg);height:720px;background-size:cover;">
+        <div class="container-fluid" style="margin-top:116px;background-color:rgb(17, 29, 42);">
+            <div class="container" style="padding:10px 0px;">
+                <div class="col-md-12">
+                    <b class="font-roboto-r" style="display:block;text-align:center;font-size:22px;color:#fff49B;">Registrations for Batch 2.0 Are Open</b>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid" style="background-image:url(images/background-pic.jpg);height:720px;background-size:cover;">
             <div class="container">
                 <div class="col-md-12" style="padding:20px 0px;">
                     <b class="font-Oswald-b" style="display:block;text-align:center;font-size:60px;color:#fff;line-height: 1em;">If You Have To
@@ -189,7 +196,7 @@
                     <b class="font-Oswald-b" style="display:block;text-align:center;font-size:30px;color:#fff;">
                         WHO'S IT FOR?</b>
                     <b class="font-roboto-r"
-                        style="display:block;text-align:center;font-size:17px;color:#fff49B;">Entrepreneurs, Students,Cryptocurrency Exploring Passive Income Sources</b>
+                        style="display:block;text-align:center;font-size:17px;color:#fff49B;">Entrepreneurs, Students, Cryptocurrency Explorers, Passive Income Seekers</b>
                 </div>
             </div>
         </div>
@@ -585,7 +592,7 @@
                         <img src="icons/Notes.png" width="100" alt="">
                     </div>
                     <div class="col-md-6" style="padding:0px 10px;">
-                        <b class="font-Oswald-b" style="text-align:left;color:rgb(255, 239, 113);font-size:28px;">Life-Changing Case Studies, Tutorials and Blueprints shared by 28+ Experts and Influencers <span style="color:#fff;">(INR 10,000 value)</span></b>
+                        <b class="font-Oswald-b" style="text-align:left;color:rgb(255, 239, 113);font-size:28px;">Case study of Venezuelan Economy <span style="color:#fff;">(INR 10,000 value)</span></b>
                         <br>
                         <b class="font-roboto-r" style="text-align:left;color:#fff;font-size:15px;font-weight:normal;">These are like 30-day financial plans with proven and trusted
                             finance secrets for anyone who wants to start or boost their online journey. </b>
@@ -1388,7 +1395,10 @@
             </header>
         </div>
         <!-- Page Content -->
-        <div class="container-fluid" style="margin-top:109px;background-image:url(images/background-pic.jpg);background-size:cover;">
+        <div class="container-fluid" style="margin-top:160px;background-color:rgb(17, 29, 42);padding: 30px 0px;">
+            <b class="font-roboto-r" style="display:block;text-align:center;font-size:50px;color:#fff49B;">Registrations for Batch 2.0 Are Open</b>
+        </div>
+        <div class="container-fluid" style="background-image:url(images/background-pic.jpg);background-size:cover;">
             <div style="padding:60px 0px;">
                 <b class="font-Oswald-b"
                     style="display:block;text-align:center;font-size:90px;color:#fff;line-height:100px;">If You Have To START</b>
@@ -1454,8 +1464,7 @@
                     <b class="font-Oswald-b" style="display:block;text-align:center;font-size:70px;color:#fff;">
                         WHO'S IT FOR?</b>
                     <b class="font-roboto-r"
-                        style="display:block;text-align:center;font-size:45px;color:#fff49B;">Entrepreneurs, Students,
-                        Cryptocurrency Exploring Passive Income Sources</b>
+                        style="display:block;text-align:center;font-size:45px;color:#fff49B;">Entrepreneurs, Students, Cryptocurrency Explorers, Passive Income Seekers</b>
                 </div>
             </div>
         </div>
@@ -1843,7 +1852,7 @@
                         <img src="icons/Notes.png" width="170" alt="">
                     </div>
                     <div class="col-md-8" style="padding:0px 10px;">
-                        <b class="font-roboto-b" style="text-align:left;color:rgb(255, 239, 113);font-size:40px;">Life-Changing Case Studies, Tutorials and Blueprints shared by 28+ Experts and Influencers <span style="color:#fff;">(INR 10,000 value)</span></b>
+                        <b class="font-roboto-b" style="text-align:left;color:rgb(255, 239, 113);font-size:40px;">Case study of Venezuelan Economy <span style="color:#fff;">(INR 10,000 value)</span></b>
                         <br>
                         <b class="font-roboto-r" style="text-align:left;color:#fff;font-size:32px;font-weight:normal;">These are like 30-day financial plans with proven and trusted
                             finance secrets for anyone who wants to start or boost their online journey. </b>
